Added words to spelling list.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,10 @@
 {
     "cSpell.words": [
+        "Adafruit",
+        "AHRS",
         "madgwick",
         "mahony",
-        "qdot"
+        "qdot",
+        "Reefwing"
     ]
 }
